--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "bcrypt": "^5.0.0",
+    "buffer": "^6.0.3",
+    "constate": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "expo": "~39.0.2",
